Update dogs.html to move yen, gino, yoshi and melon

--- a/dogs.html
+++ b/dogs.html
@@ -70,23 +70,11 @@
                 </div>
             </div>
 
-            <div>
-                <div class="container">
-                    <img src="images/dogs_melon.jpeg"
-                        alt="Melon - on hover, more details can be seen; (SP24 - Present), Raised by: Casey Dies & Emory Walsh, Female Yellow Labrador">
-                    <p>Melon (2M323)</p>
-                    <div class="overlay">
-                        <h3>(SP24 - Present)</h3>
-                        <h3>Co-raised by: Casey Dies & Emory Walsh</h3>
-                        <h3>Female Yellow Labrador</h3>
-                    </div>
-                </div>
-            </div>
 
             <div>
                 <div class="container">
                     <img src="images/dogs_fianna.png"
-                        alt="Fianna - on hover, more details can be seen; (SP24 - Present), Raised by: Jenna Gaglioti, Female Black Labrador">
+                        alt="Fianna - on hover, more details can be seen; (SP24 - Present), Raised by: Karlah Culver, Female Black Labrador">
                     <p>Fianna (3F322)</p>
                     <div class="overlay">
                         <h3>(SP24 - Present)</h3>
@@ -96,24 +84,7 @@
                 </div>
             </div>
 
-            <div>
-                <div class="container">
-                    <img src="images/dogs_yen.png"
-                        alt="Yen - on hover, more details can be seen; (SP24 - Present), Raised by: Rachel Craig and Evelyn Chiu, Male Black Labrador">
-                    <p>Yen (5YY23)</p>
-                    <div class="overlay">
-                        <h3>(SP24 - Present)</h3>
-                        <h3>Co-raised by: Rachel Craig & Evelyn Chiu</h3>
-                        <h3>Male Black Labrador</h3>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-
-        <div class="dog-row">
-
-            <div>
+              <div>
                 <div class="container">
                     <img src="images/dogs_keeper.jpg"
                         alt="Keeper - on hover, more details can be seen; (SP24 - Present), Raised by: Rosie Hsu, Male Yellow Labrador">
@@ -126,35 +97,9 @@
                 </div>
             </div>
 
-            <div>
-                <div class="container">
-                    <img src="images/dogs_gino.png"
-                        alt="Gino - on hover, more details can be seen; (FA23 - Present), Raised by: Oscar Minaya, Male Black Labrador">
-                    <p>Gino (6GG23)</p>
-                    <div class="overlay">
-                        <h3>(FA23 - Present)</h3>
-                        <h3>Raised by: Oscar Minaya</h3>
-                        <h3>Male Black Labrador</h3>
-                    </div>
-                </div>
-            </div>
 
-            <div>
-                <div class="container">
-                    <img src="images/dogs_yoshiko.png"
-                        alt="Yoshiko - on hover, more details can be seen; (SP23 - Present), Raised by: Jenna Gaglioti, Female Yellow Labrador">
-                    <p>Yoshiko (5Y322)</p>
-                    <div class="overlay">
-                        <h3>(SP23 - Present)</h3>
-                        <h3>Raised by: Nadia Despradel Canela</h3>
-                        <h3>Female Yellow Labrador</h3>
-                    </div>
-                </div>
-            </div>
-
-
-            <div></div>
-
+        </div>
+         <div></div>
         </div>
 
 
@@ -170,6 +115,61 @@
                         <h3>(SP23 - SP24)</h3>
                         <h3>Co-raised by: Emory Walsh & Casey Dies</h3>
                         <h3>Harness Training</h3>
+                    </div>
+                </div>
+            </div>
+
+             <div>
+                <div class="container">
+                    <img src="images/dogs_yoshiko.png"
+                        alt="Yoshiko - on hover, more details can be seen; (SP23 - SP24), Raised by: Jenna Gaglioti, Female Yellow Labrador">
+                    <p>Yoshiko (5Y322)</p>
+                    <div class="overlay">
+                        <h3>(SP23 - SP24)</h3>
+                        <h3>Raised by: Nadia Despradel Canela</h3>
+                        <h3>Female Yellow Labrador</h3>
+                    </div>
+                </div>
+            </div>
+            
+            <div>
+                <div class="container">
+                    <img src="images/dogs_gino.png"
+                        alt="Gino - on hover, more details can be seen; (FA23 - SP24), Raised by: Oscar Minaya, Male Black Labrador">
+                    <p>Gino (6GG23)</p>
+                    <div class="overlay">
+                        <h3>(FA23 - SP24)</h3>
+                        <h3>Raised by: Oscar Minaya</h3>
+                        <h3>Male Black Labrador</h3>
+                    </div>
+                </div>
+            </div>
+
+            
+            <div>
+                <div class="container">
+                    <img src="images/dogs_yen.png"
+                        alt="Yen - on hover, more details can be seen; (SP24 - FA24), Raised by: Rachel Craig and Evelyn Chiu, Male Black Labrador">
+                    <p>Yen (5YY23)</p>
+                    <div class="overlay">
+                        <h3>(SP24 - FA24)</h3>
+                        <h3>Co-raised by: Rachel Craig & Evelyn Chiu</h3>
+                        <h3>Male Black Labrador</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+          <div class="dog-row">
+            <div>
+                <div class="container">
+                    <img src="images/dogs_melon.jpeg"
+                        alt="Melon - on hover, more details can be seen; (SP24 - FA24), Raised by: Casey Dies & Emory Walsh, Female Yellow Labrador">
+                    <p>Melon (2M323)</p>
+                    <div class="overlay">
+                        <h3>(SP24 - FA24)</h3>
+                        <h3>Co-raised by: Casey Dies & Emory Walsh</h3>
+                        <h3>Female Yellow Labrador</h3>
                     </div>
                 </div>
             </div>
@@ -190,7 +190,7 @@
             <div>
                 <div class="container">
                     <img src="images/dogs_tina.png"
-                        alt="Tina - on hover, more details can be seen; (SP23 - Present), Raised by: Dana Matusewicz, Male Yellow Labrador">
+                        alt="Tina - on hover, more details can be seen; (SP23 - SP24), Raised by: Dana Matusewicz, Male Yellow Labrador">
                     <p>Tina (1TT22)</p>
                     <div class="overlay">
                         <h3>(SP23 - SP24)</h3>
@@ -203,12 +203,12 @@
             <div>
                 <div class="container">
                     <img src="images/dogs_herb.png"
-                        alt="Herb - on hover, more details can be seen; (FA22 - Present), Raised by: Faith Bailey, Female Black Labrador">
+                        alt="Herb - on hover, more details can be seen; (FA22 - FA23), Raised by: Faith Bailey, Female Black Labrador">
                     <p>Herb (5HH22)</p>
                     <div class="overlay">
                         <h3>(FA22 - FA23)</h3>
                         <h3>Raised by: Jenna Gaglioti</h3>
-                        <h3>Harness Training</h3>
+                        <h3>Guide Dog</h3>
                     </div>
                 </div>
             </div>
@@ -220,7 +220,7 @@
             <div>
                 <div class="container">
                     <img src="images/dogs_oak.png"
-                        alt="Gino - on hover, more details can be seen; (FA22 - SP23), Co-raised by: Alyssa Roorda, Soon to take his IFT">
+                        alt="Oak - on hover, more details can be seen; (FA22 - SP23), Co-raised by: Alyssa Roorda, Soon to take his IFT">
                     <p>Oak (2O22)</p>
                     <div class="overlay">
                         <h3>(FA22 - SP23)</h3>
