Update dogs.html to add karlah as fianna's raiser

--- a/dogs.html
+++ b/dogs.html
@@ -78,7 +78,7 @@
                     <p>Fianna (3F322)</p>
                     <div class="overlay">
                         <h3>(SP24 - Present)</h3>
-                        <h3>Raised by: Jenna Gaglioti</h3>
+                        <h3>Raised by: Karlah Culver</h3>
                         <h3>Female Black Labrador</h3>
                     </div>
                 </div>
