Update dogs.html to update minor changes

--- a/dogs.html
+++ b/dogs.html
@@ -64,7 +64,7 @@
                     <p>Deirdre (6D423)</p>
                     <div class="overlay">
                         <h3>(SP24 - Present)</h3>
-                        <h3>Co-raised by: Laura Bernert</h3>
+                        <h3>Raised by: Laura Bernert</h3>
                         <h3>Female Black Labrador</h3>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                     <p>Fianna (3F322)</p>
                     <div class="overlay">
                         <h3>(SP24 - Present)</h3>
-                        <h3>Raised by: Karlah Culver</h3>
+                        <h3>Raised by: Jenna Gaglioti (starter) and Karlah Culver (finisher)</h3>
                         <h3>Female Black Labrador</h3>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                     <p>Keeper (7KK23)</p>
                     <div class="overlay">
                         <h3>(SP24 - Present)</h3>
-                        <h3>Co-raised by: Rosie Hsu</h3>
+                        <h3>Raised by: Rosie Hsu</h3>
                         <h3>Male Yellow Labrador</h3>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                     <div class="overlay">
                         <h3>(SP23 - SP24)</h3>
                         <h3>Raised by: Nadia Despradel Canela</h3>
-                        <h3>Female Yellow Labrador</h3>
+                        <h3>Harness Training</h3>
                     </div>
                 </div>
             </div>
@@ -138,9 +138,9 @@
                         alt="Gino - on hover, more details can be seen; (FA23 - SP24), Raised by: Oscar Minaya, Male Black Labrador">
                     <p>Gino (6GG23)</p>
                     <div class="overlay">
-                        <h3>(FA23 - SP24)</h3>
+                        <h3>(FA23 - SUM24)</h3>
                         <h3>Raised by: Oscar Minaya</h3>
-                        <h3>Male Black Labrador</h3>
+                        <h3>Breed Evaluation</h3>
                     </div>
                 </div>
             </div>
@@ -208,7 +208,7 @@
                     <div class="overlay">
                         <h3>(FA22 - FA23)</h3>
                         <h3>Raised by: Jenna Gaglioti</h3>
-                        <h3>Guide Dog</h3>
+                        <h3>Guide Dog in Alaska</h3>
                     </div>
                 </div>
             </div>
