--- a/dogs.html
+++ b/dogs.html
@@ -87,16 +87,46 @@
               <div>
                 <div class="container">
                     <img src="images/dogs_keeper.jpg"
-                        alt="Keeper - on hover, more details can be seen; (SP24 - Present), Raised by: Rosie Hsu, Male Yellow Labrador">
+                        alt="Keeper - on hover, more details can be seen; (SP24 - Present), Co-Raised by: Rosie Hsu and Jillian Conlon (IC), Male Yellow Labrador">
                     <p>Keeper (7KK23)</p>
                     <div class="overlay">
                         <h3>(SP24 - Present)</h3>
-                        <h3>Raised by: Rosie Hsu</h3>
+                        <h3>Co-Raised by: Rosie Hsu and Jillian Conlon (IC)</h3>
                         <h3>Male Yellow Labrador</h3>
                     </div>
                 </div>
             </div>
+        </div>
 
+      <div class="dog-row">
+
+            <div>
+                <div class="container">
+                    <img src="images/dogs_calista.png"
+                        alt="Calista - on hover, more details can be seen; (SP24 - Present), Raised by: Dana Matusewicz, Pup">
+                    <p>Calista (7C24)</p>
+                    <div class="overlay">
+                        <h3>(SP24 - Present)</h3>
+                        <h3>Raised by: Dana Matusewicz</h3>
+                        <h3>Yellow Female Labrador</h3>
+                    </div>
+                </div>
+            </div>
+
+        
+              <div>
+                <div class="container">
+                    <img src="images/sadie.png"
+                        alt="Sadie - on hover, more details can be seen; (FA24 - Present), Co-Raised by: Madison Rosario and the Tamis Family, Female Black Labrador">
+                    <p>Sadie (6S24)</p>
+                    <div class="overlay">
+                        <h3>(FA24 - Present)</h3>
+                        <h3>Co-Raised by: Madison Rosario and the Tamis Family</h3>
+                        <h3>Female Black Labrador</h3>
+                    </div>
+                </div>
+            </div>
+ 
 
         </div>
          <div></div>
@@ -195,7 +225,7 @@
                     <div class="overlay">
                         <h3>(SP23 - SP24)</h3>
                         <h3>Raised by: Faith Bailey</h3>
-                        <h3>Breed Evaluation</h3>
+                        <h3>Brood female</h3>
                     </div>
                 </div>
             </div>
