--- a/dogs.html
+++ b/dogs.html
@@ -59,7 +59,7 @@
 
             <div>
                 <div class="container">
-                    <img src="images/sadie.png"
+                    <img src="images/sadie.jpg"
                         alt="Sadie - on hover, more details can be seen; (FA24 - Present), Co-Raised by: Madison Rosario and the Tamis Family, Female Black Labrador">
                     <p>Sadie (6S24)</p>
                     <div class="overlay">
@@ -72,7 +72,7 @@
 
               <div>
                 <div class="container">
-                    <img src="images/dogs_calista.png"
+                    <img src="images/dogs_calista.jpg"
                         alt="Calista - on hover, more details can be seen; (SP24 - Present), Raised by: Dana Matusewicz, Pup">
                     <p>Calista (7C24)</p>
                     <div class="overlay">
