Update dogs.html to add rudolph

--- a/dogs.html
+++ b/dogs.html
@@ -197,6 +197,20 @@
 
           <div class="dog-row">
 
+             <div>
+                <div class="container">
+                    <img src="images/dogs_rudolph.jpg"
+                        alt="Rudolph - on hover, more details can be seen; (SP23 - SP24), Raised by: Nardine Nasr, Yellow Male Labrador">
+                    <p>Rudolph (4R322)</p>
+                    <div class="overlay">
+                        <h3>(SP23 - SP24)</h3>
+                        <h3>Raised by: Nardine Nasr</h3>
+                        <h3>Yellow Male Labrador</h3>
+                        <h3>Stud (breeder)</h3>
+                    </div>
+                </div>
+            </div>
+
             <div>
                 <div class="container">
                     <img src="images/dogs_paisley.png"
@@ -237,6 +251,11 @@
                 </div>
             </div>
 
+        </div>
+
+        <div class="dog-row">
+
+            
             <div>
                 <div class="container">
                     <img src="images/dogs_herb.png"
@@ -249,10 +268,6 @@
                     </div>
                 </div>
             </div>
-
-        </div>
-
-        <div class="dog-row">
 
             <div>
                 <div class="container">
@@ -293,7 +308,11 @@
                 </div>
             </div>
 
-            <div>
+        </div>
+
+        <div class="dog-row">
+
+             <div>
                 <div class="container">
                     <img src="images/dogs_truffle.png"
                         alt="Truffle  - on hover, more details can be seen; (FA21 - SP23), Raised by: Raised by: Matt Roohan, Adopted back by Matt">
@@ -305,10 +324,6 @@
                     </div>
                 </div>
             </div>
-
-        </div>
-
-        <div class="dog-row">
 
             <div>
                 <div class="container">
@@ -349,7 +364,11 @@
                 </div>
             </div>
 
-            <div>
+        </div>
+
+        <div class="dog-row">
+
+              <div>
                 <div class="container">
                     <img src="images/dogs_verdi.png"
                         alt="Verdi - on hover, more details can be seen; (FA19 - SP21), Raised by: Michelle Robbins, Working as a guide dog">
@@ -361,6 +380,7 @@
                     </div>
                 </div>
             </div>
+            
             <div></div>
         </div>
 
