Update dogs.html to fix formatting

--- a/dogs.html
+++ b/dogs.html
@@ -199,7 +199,7 @@
 
              <div>
                 <div class="container">
-                    <img src="images/dogs_rudolph.jpg"
+                    <img src="images/dogs_rudolph.png"
                         alt="Rudolph - on hover, more details can be seen; (SP23 - SP24), Raised by: Nardine Nasr, Yellow Male Labrador">
                     <p>Rudolph (4R322)</p>
                     <div class="overlay">
