Update dogs.html for vic, zen and airman

--- a/dogs.html
+++ b/dogs.html
@@ -70,6 +70,48 @@
                 </div>
             </div>
 
+             <div>
+                <div class="container">
+                    <img src="images/geb_vic.jpg"
+                        alt="Vic - on hover, more details can be seen; (FA24 - Present), Raised by: Sasha Theder, Male Black Labrador">
+                    <p>Vic (5V24)</p>
+                    <div class="overlay">
+                        <h3>(FA24 - Present)</h3>
+                        <h3>Raised by: Sasha Theder</h3>
+                        <h3>Male Black Labrador</h3>
+                    </div>
+                </div>
+            </div>
+
+             <div>
+                <div class="container">
+                    <img src="images/geb_zen.jpg"
+                        alt="Zen - on hover, more details can be seen; (FA24 - Present), Co-Raised by: Akaysha Williams and Rhiyan Gray, Male Yellow Labrador">
+                    <p>Zen (1Z24)</p>
+                    <div class="overlay">
+                        <h3>(FA24 - Present)</h3>
+                        <h3>Co-Raised by: Akaysha Williams and Rhiyan Gray</h3>
+                        <h3>Male Yellow Labrador</h3>
+                    </div>
+                </div>
+            </div>
+
+             <div>
+                <div class="container">
+                    <img src="images/geb_airman.jpg"
+                        alt="Airman - on hover, more details can be seen; (FA24 - Present), Raised by: Oscar Minyana, Yellow Male Labrador">
+                    <p>Airman (5AA24)</p>
+                    <div class="overlay">
+                        <h3>(FA24 - Present)</h3>
+                        <h3>Raised by: Oscar Minyana</h3>
+                        <h3>Male Yellow Labrador</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="dog-row">
+
               <div>
                 <div class="container">
                     <img src="images/dogs_calista.jpg"
@@ -96,8 +138,6 @@
                 </div>
             </div>
         </div>
-
-      <div class="dog-row">
           
             <div>
                 <div class="container">
@@ -121,13 +161,6 @@
                         <h3>(SP24 - Present)</h3>
                         <h3>Co-Raised by: Rosie Hsu and Jillian Conlon (IC)</h3>
                         <h3>Male Yellow Labrador</h3>
-                    </div>
-                </div>
-            </div>
-
-            
-            <div>
-                <div class="container">
                     </div>
                 </div>
             </div>
